maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:11: error: not found: value est
 {droite();if (est FaceMur()) {droite()}; avance()}
               ^